Updates to Vertx 5